tests/lit/tcheck/runtime_00.isa
// RUN: not %iii --batchmode --runtime-checks %s | filecheck %s
// Copyright (C) 2026-2026 Intel Corporation

function Test()
begin
    let t := 0b1[7:0];
// CHECK: Type error: Runtime check for bitslice is in bounds will always fail
end
